Updated test code to make it easier to test token results

--- a/MyLexerTests/MyLexerTests.csproj
+++ b/MyLexerTests/MyLexerTests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseLexerTests.cs" />
     <Compile Include="HtmlTokenTests.cs" />
     <Compile Include="LexerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
